# wasm-ai-demo-app

./: Cargo.toml  README.md
src/: http.rs  inference.rs  main.rs  routes.rs
src/templates/: 404.html  base.html  index.html  inference.html
