[package]
name = "wasm-ai-demo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
warp_wasi = "0.3"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
tera = { version = "1", default-features = false }
wasi-nn = { version = "0.6.0" }
lazy_static = "1.4.0"
#regex = "1.7.3"
#formdata = "0.13.0"
